--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   </button>
 
   <!-- Modal Setting Dialog -->
-  <div class="modal fade" id="modal-settings" tabindex="-1" aria-hidden="true">
+  <div class="modal fade" id="modal-settings" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header text-bg-info">
@@ -360,27 +360,86 @@
               </div>
             </fieldset>
 
+            <div class="alert alert-info">
+              The border, bold, and color settings will not take effect until you refresh the page.
+            </div>
+
             <div class="row mb-3">
-              <div class="col-form-label col-sm-3 pt-0">Border</div>
-              <div class="col-sm-9">
+              <div class="col-form-label col-sm-3 pt-0">Markers</div>
+              <div class="col-sm-6">
+                <select class="form-select" id="select-marker-color">
+                  <option value="red">Red</option>
+                  <option value="pink" selected>Pink</option>
+                  <option value="orange">Orange</option>
+                  <option value="yellow">Yellow</option>
+                  <option value="green">Green</option>
+                  <option value="teal">Teal</option>
+                  <option value="blue">Blue</option>
+                  <option value="cyan">Cyan</option>
+                  <option value="indigo">Indigo</option>
+                  <option value="purple">Purple</option>
+                  <option value="gray">Gray</option>
+                </select>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-3 offset-sm-3">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="border-markers" checked>
-                  <label class="form-check-label" for="border-markers">
-                    Draw Border on Markers
+                  <input class="form-check-input" type="checkbox" id="chkbox-marker-bold" checked>
+                  <label class="form-check-label" for="chkbox-marker-bold">
+                    Bold
+                  </label>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="chkbox-marker-border" checked>
+                  <label class="form-check-label" for="chkbox-marker-border">
+                    Border
                   </label>
                 </div>
               </div>
             </div>
+
             <div class="row mb-3">
-              <div class="col-sm-9 offset-sm-3">
+              <div class="col-form-label col-sm-3 pt-0">Polylines</div>
+              <div class="col-sm-6">
+                <select class="form-select" id="select-polyline-color">
+                  <option value="red">Red</option>
+                  <option value="pink">Pink</option>
+                  <option value="darkpink" selected>Dark Pink</option>
+                  <option value="orange">Orange</option>
+                  <option value="yellow">Yellow</option>
+                  <option value="green">Green</option>
+                  <option value="teal">Teal</option>
+                  <option value="blue">Blue</option>
+                  <option value="cyan">Cyan</option>
+                  <option value="indigo">Indigo</option>
+                  <option value="purple">Purple</option>
+                  <option value="gray">Gray</option>
+                </select>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-sm-3 offset-sm-3">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="border-polylines" checked>
-                  <label class="form-check-label" for="border-polylines">
-                    Draw Border on Polylines
+                  <input class="form-check-input" type="checkbox" id="chkbox-polyline-bold" checked>
+                  <label class="form-check-label" for="chkbox-polyline-bold">
+                    Bold
                   </label>
                 </div>
               </div>
+              <div class="col-sm-3">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="chkbox-polyline-border" checked>
+                  <label class="form-check-label" for="chkbox-polyline-border">
+                    Border
+                  </label>
+                </div>
+              </div>
+              </div>
             </div>
+
           </form>
         </div>
         <div class="modal-footer">
