--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="drop-note h5">GPX ファイルをドラッグ&ドロップ</div>
                 <div class="drop-subnote">またはクリックしてアップロード</div>
               </div>
-              <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
+              <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx">
             </div>
           </div>
   
@@ -365,7 +365,7 @@
             </div>
 
             <div class="row mb-3">
-              <div class="col-form-label col-sm-3 pt-0">Markers</div>
+              <div class="col-form-label col-sm-3">Markers</div>
               <div class="col-sm-6">
                 <select class="form-select" id="select-marker-color">
                   <option value="red">Red</option>
@@ -402,7 +402,7 @@
             </div>
 
             <div class="row mb-3">
-              <div class="col-form-label col-sm-3 pt-0">Polylines</div>
+              <div class="col-form-label col-sm-3">Polylines</div>
               <div class="col-sm-6">
                 <select class="form-select" id="select-polyline-color">
                   <option value="red">Red</option>
@@ -437,9 +437,7 @@
                   </label>
                 </div>
               </div>
-              </div>
             </div>
-
           </form>
         </div>
         <div class="modal-footer">
@@ -451,7 +449,7 @@
   </div>
 
   <!-- Modal Dialog with an OK button -->
-  <div class="modal fade" id="modal-ok" tabindex="-1" aria-hidden="true">
+  <div class="modal fade" id="modal-ok" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -467,7 +465,7 @@
   </div>
 
   <!-- Modal Dialog with a cancel and a confirm buttons -->
-  <div class="modal fade" id="modal-cancel-confirm" tabindex="-1" aria-hidden="true">
+  <div class="modal fade" id="modal-cancel-confirm" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
