Removed the dark pink color option. Fixed a bug that the checkboxes on the setting dialog were not turned on by default.

--- a/index.html
+++ b/index.html
@@ -403,7 +403,6 @@
                 <select class="form-select" id="select-polyline-color">
                   <option class="red" value="red">Red</option>
                   <option class="pink" value="pink">Pink</option>
-                  <option class="darkpink" value="darkpink" selected>Dark Pink</option>
                   <option class="orange" value="orange">Orange</option>
                   <option class="yellow" value="yellow">Yellow</option>
                   <option class="green" value="green">Green</option>
@@ -411,7 +410,7 @@
                   <option class="blue" value="blue">Blue</option>
                   <option class="cyan" value="cyan">Cyan</option>
                   <option class="indigo" value="indigo">Indigo</option>
-                  <option class="purple" value="purple">Purple</option>
+                  <option class="purple" value="purple" selected>Purple</option>
                   <option class="gray" value="gray">Gray</option>
                 </select>
               </div>
