--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
               </div>
             </fieldset>
 
-            <div class="row row-marker-color mb-3">
+            <div class="row row-marker mb-3">
               <div class="col-form-label col-sm-3">Markers</div>
-              <div class="col-sm-9">
+              <div class="col-sm-6">
                 <select class="form-select" id="select-marker-color">
                   <option class="red" value="red">Red</option>
                   <option class="pink" value="pink" selected>Pink</option>
@@ -377,17 +377,7 @@
                   <option class="gray" value="gray">Gray</option>
                 </select>
               </div>
-            </div>
-            <div class="row row-marker-options mb-3">
-              <div class="col-sm-3 offset-sm-3">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="chkbox-marker-bold" checked>
-                  <label class="form-check-label label-bold" for="chkbox-marker-bold">
-                    Bold
-                  </label>
-                </div>
-              </div>
-              <div class="col-sm-3">
+              <div class="col-sm-3 pt-2">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="chkbox-marker-border" checked>
                   <label class="form-check-label label-border" for="chkbox-marker-border">
@@ -397,9 +387,9 @@
               </div>
             </div>
 
-            <div class="row row-polyline-color mb-3">
+            <div class="row row-polyline mb-3">
               <div class="col-form-label col-sm-3">Polylines</div>
-              <div class="col-sm-9">
+              <div class="col-sm-6">
                 <select class="form-select" id="select-polyline-color">
                   <option class="red" value="red">Red</option>
                   <option class="pink" value="pink">Pink</option>
@@ -414,17 +404,7 @@
                   <option class="gray" value="gray">Gray</option>
                 </select>
               </div>
-            </div>
-            <div class="row row-polyline-options mb-3">
-              <div class="col-sm-3 offset-sm-3">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="chkbox-polyline-bold" checked>
-                  <label class="form-check-label label-bold" for="chkbox-polyline-bold">
-                    Bold
-                  </label>
-                </div>
-              </div>
-              <div class="col-sm-3">
+              <div class="col-sm-3 pt-2">
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="chkbox-polyline-border" checked>
                   <label class="form-check-label label-border" for="chkbox-polyline-border">
@@ -435,6 +415,7 @@
             </div>
           </form>
         </div>
+
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" id="reset-settings">Reset to Defaults</button>
           <button type="button" class="btn btn-primary btn-confirm btn-info" data-bs-dismiss="modal">OK</button>
