Color selection drop-down list options in the settings dialog are now created from the JS-defined colorMap.

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <div class="col-form-label col-sm-3">Markers</div>
               <div class="col-sm-6">
                 <select class="form-select" id="select-marker-color">
-                  <option class="red" value="red">Red</option>
+                  <!-- <option class="red" value="red">Red</option>
                   <option class="pink" value="pink" selected>Pink</option>
                   <option class="orange" value="orange">Orange</option>
                   <option class="yellow" value="yellow">Yellow</option>
@@ -374,7 +374,7 @@
                   <option class="cyan" value="cyan">Cyan</option>
                   <option class="indigo" value="indigo">Indigo</option>
                   <option class="purple" value="purple">Purple</option>
-                  <option class="gray" value="gray">Gray</option>
+                  <option class="gray" value="gray">Gray</option> -->
                 </select>
               </div>
               <div class="col-sm-3 pt-2">
@@ -391,7 +391,7 @@
               <div class="col-form-label col-sm-3">Polylines</div>
               <div class="col-sm-6">
                 <select class="form-select" id="select-polyline-color">
-                  <option class="red" value="red">Red</option>
+                  <!-- <option class="red" value="red">Red</option>
                   <option class="pink" value="pink">Pink</option>
                   <option class="orange" value="orange">Orange</option>
                   <option class="yellow" value="yellow">Yellow</option>
@@ -401,7 +401,7 @@
                   <option class="cyan" value="cyan">Cyan</option>
                   <option class="indigo" value="indigo">Indigo</option>
                   <option class="purple" value="purple" selected>Purple</option>
-                  <option class="gray" value="gray">Gray</option>
+                  <option class="gray" value="gray">Gray</option> -->
                 </select>
               </div>
               <div class="col-sm-3 pt-2">
