Added a new zigzag operation.

--- a/index.html
+++ b/index.html
@@ -360,33 +360,6 @@
               </div>
             </fieldset>
 
-            <div class="row row-marker mb-3">
-              <div class="col-form-label col-sm-3">Markers</div>
-              <div class="col-sm-6">
-                <select class="form-select" id="select-marker-color">
-                  <!-- <option class="red" value="red">Red</option>
-                  <option class="pink" value="pink" selected>Pink</option>
-                  <option class="orange" value="orange">Orange</option>
-                  <option class="yellow" value="yellow">Yellow</option>
-                  <option class="green" value="green">Green</option>
-                  <option class="teal" value="teal">Teal</option>
-                  <option class="blue" value="blue">Blue</option>
-                  <option class="cyan" value="cyan">Cyan</option>
-                  <option class="indigo" value="indigo">Indigo</option>
-                  <option class="purple" value="purple">Purple</option>
-                  <option class="gray" value="gray">Gray</option> -->
-                </select>
-              </div>
-              <div class="col-sm-3 pt-2">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="chkbox-marker-border" checked>
-                  <label class="form-check-label label-border" for="chkbox-marker-border">
-                    Border
-                  </label>
-                </div>
-              </div>
-            </div>
-
             <div class="row row-polyline mb-3">
               <div class="col-form-label col-sm-3">Polylines</div>
               <div class="col-sm-6">
@@ -413,6 +386,34 @@
                 </div>
               </div>
             </div>
+
+            <div class="row row-marker mb-3">
+              <div class="col-form-label col-sm-3">Markers</div>
+              <div class="col-sm-6">
+                <select class="form-select" id="select-marker-color">
+                  <!-- <option class="red" value="red">Red</option>
+                  <option class="pink" value="pink" selected>Pink</option>
+                  <option class="orange" value="orange">Orange</option>
+                  <option class="yellow" value="yellow">Yellow</option>
+                  <option class="green" value="green">Green</option>
+                  <option class="teal" value="teal">Teal</option>
+                  <option class="blue" value="blue">Blue</option>
+                  <option class="cyan" value="cyan">Cyan</option>
+                  <option class="indigo" value="indigo">Indigo</option>
+                  <option class="purple" value="purple">Purple</option>
+                  <option class="gray" value="gray">Gray</option> -->
+                </select>
+              </div>
+              <div class="col-sm-3 pt-2 invisible">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="chkbox-marker-border" checked>
+                  <label class="form-check-label label-border" for="chkbox-marker-border">
+                    Border
+                  </label>
+                </div>
+              </div>
+            </div>
+
           </form>
         </div>
 
