--- a/index.html
+++ b/index.html
@@ -449,7 +449,9 @@
           <h5 class="modal-title">Modal title</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">The modal body goes here...</div>
+        <div class="modal-body">
+          The modal body goes here...
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary btn-cancel" data-bs-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-primary btn-confirm">Confirm</button>
